--- a/style.css
+++ b/style.css
@@ -465,6 +465,10 @@ nav img {
   font-size: 1.5rem;
 }
 
+.faq-box object {
+  pointer-events: none;
+}
+
 .faq-box:hover {
   background-color: rgb(81, 81, 81);
 }
