--- a/style.css
+++ b/style.css
@@ -728,7 +728,7 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-  -webkit-text-fill-color: rgb(202, 195, 195) !important;  
+  -webkit-text-fill-color: #ffffff !important;  
   caret-color: #ffffff;
   -webkit-box-shadow: 0 0 0 1000px transparent inset !important;
   transition: background-color 9999s ease-in-out 0s;
